// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AppHeaderBar default 1`] = `
<div>
  <nav
    className="tc-app-header-bar undefined navbar navbar-inverse navbar-fixed-top"
  >
    <div
      className="container-fluid"
    >
      <div
        className="navbar-header"
      >
        <button
          className="navbar-brand btn btn-link"
          disabled={false}
          onClick={[Function]}
          role="link"
          type="button"
        >
          Example App Name
        </button>
        <button
          className="navbar-toggle collapsed"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Toggle navigation
          </span>
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
        </button>
      </div>
      <div
        aria-expanded={null}
        className="navbar-collapse collapse"
      >
        <ul
          className="nav navbar-nav"
          role={null}
        >
          <li>
            <button
              className="btn btn-link"
              disabled={false}
              name="hello"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOver={[Function]}
              role={null}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-burger"
                />
              </svg>
            </button>
          </li>
        </ul>
        <ul
          className="nav navbar-nav navbar-right"
          role={null}
        >
          <li>
            <button
              className="btn btn-link"
              disabled={false}
              name="world"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOver={[Function]}
              role={null}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-world"
                />
              </svg>
            </button>
          </li>
          <li
            className="dropdown"
            style={undefined}
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href="#"
              id="myDropdown"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              user 1
               
              <span
                className="caret"
              />
            </a>
            <ul
              aria-labelledby="myDropdown"
              className="dropdown-menu"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  <i
                    aria-hidden="true"
                    className="fa fa-fw fa-cog"
                    focusable="false"
                    title={null}
                  />
                  settings
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </nav>
  <svg
    focusable="false"
    style={
      Object {
        "display": "none",
      }
    }
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      id="talend-world"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M.1 9.26a8.07 8.07 0 0 1 3.718-8.077 7.965 7.965 0 0 1 8.073-.164 8.15 8.15 0 0 1 3.994 8.33 7.995 7.995 0 0 1-14.337 3.376A7.94 7.94 0 0 1 .1 9.26zm4.08-.195a1.146 1.146 0 0 0 1.78.842c.344.072.99.191.81.744a2.273 2.273 0 0 1 .226 1.782c.313.62-.065 1.737.688 2.024.868.007 1.13-.925 1.578-1.474-.197-.682 1.003-.914.457-1.68-.186-.767.678-1.228.984-1.837.189-.366.277-.618-.178-.37-.694.03-1.144-.674-1.396-1.238.482-.922.777.76 1.17.98.784-.094 1.15-.826 1.448-1.365.483-.054.743.491 1.19.462.358.321.118 1.652.697 1.409-.066-.643.476-1.58 1.08-1.482-.034.71.483.35.34-.156a6.702 6.702 0 0 0-3.133-5.338c-.55-.012-.856-.293-1.072-.11-.063.427-.17.693-.705.588-.572-.204-1.033.75-1.48.38.183-.175.399-.9-.255-.834-.773.002-1.802-.105-2.245.68-.113.453.67.72.816.887.394-.756 1.496.19.456.237a3.907 3.907 0 0 0-2.123.625c.562.34.003.556-.336.571-.089.248-.1.867.194.765.61.136 1.163-1.317 1.76-.526.163.337.696.5.364-.045-.252-.256-.403-.745.057-.312.134.199.852 1.24.713.519.102-.518.378.555.769.404.844.362-.097 1.107-.676.806-.464.056-.687.585-1.123.043-.268-.163-.008-.697-.58-.476-.809.048-1.613.153-1.992.991-.418.4-.167 1-.283 1.503zm.906-4.761c.29.598 1.485-.156.79-.75-.471-.591-.995-.09-.498.426-.002.18-.168.24-.291.324z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-burger"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h16v2.3H0zm0 6.9h16v2.3H0zm0 6.8h16V16H0z"
        />
      </svg>
    </symbol>
  </svg>
  <div
    className="container"
    style={
      Object {
        "paddingTop": 40,
      }
    }
  />
</div>
`;

exports[`Storyshots AppHeaderBar while searching 1`] = `
<div>
  <nav
    className="tc-app-header-bar undefined navbar navbar-inverse navbar-fixed-top"
  >
    <div
      className="container-fluid"
    >
      <div
        className="navbar-header"
      >
        <span
          className="navbar-brand"
        >
          Example App Name
        </span>
        <button
          className="navbar-toggle collapsed"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Toggle navigation
          </span>
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
        </button>
      </div>
      <div
        aria-expanded={null}
        className="navbar-collapse collapse"
      >
        <ul
          className="nav navbar-nav"
          role={null}
        >
          <li>
            <button
              className="btn btn-link"
              disabled={false}
              name="hello"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOver={[Function]}
              role={null}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-burger"
                />
              </svg>
            </button>
          </li>
        </ul>
        <ul
          className="nav navbar-nav navbar-right"
          role={null}
        >
          <li>
            <button
              className="btn btn-link"
              disabled={false}
              name="world"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOver={[Function]}
              role={null}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-world"
                />
              </svg>
            </button>
          </li>
          <li
            className="dropdown"
            style={undefined}
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href="#"
              id="myDropdown"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              user 1
               
              <span
                className="caret"
              />
            </a>
            <ul
              aria-labelledby="myDropdown"
              className="dropdown-menu"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  <i
                    aria-hidden="true"
                    className="fa fa-fw fa-cog"
                    focusable="false"
                    title={null}
                  />
                  settings
                </a>
              </li>
            </ul>
          </li>
        </ul>
        <form
          className="navbar-form navbar-right"
          role="search"
        >
          <div
            style={Object {}}
          >
            <div
              className={undefined}
            >
              <label
                className="control-label sr-only"
                htmlFor="react-autowhatever-42-input"
              >
                Search
              </label>
              <input
                aria-activedescendant={null}
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={false}
                aria-owns="react-autowhatever-42"
                autoComplete="off"
                autoFocus={true}
                className="form-control"
                disabled={false}
                id="react-autowhatever-42-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={undefined}
                onKeyDown={undefined}
                placeholder={undefined}
                readOnly={false}
                role="combobox"
                style={Object {}}
                type="text"
                value="le"
              />
              <div
                className={undefined}
              >
                <i
                  aria-hidden="true"
                  className="fa fa-search"
                  focusable="false"
                  title={null}
                />
              </div>
            </div>
            <div
              id="react-autowhatever-42"
            >
              <div
                className="undefined undefined"
                style={Object {}}
              >
                <span
                  className="is-searching"
                >
                  Searching for matches…
                </span>
                 
                <svg
                  className=""
                  focusable="false"
                  viewBox="0 0 50 50"
                >
                  <circle
                    className={undefined}
                    cx={25}
                    cy={25}
                    fill="none"
                    r={20}
                    style={
                      Object {
                        "strokeDasharray": 12.566370614359172,
                        "strokeDashoffset": 0,
                      }
                    }
                  />
                </svg>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </nav>
  <svg
    focusable="false"
    style={
      Object {
        "display": "none",
      }
    }
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      id="talend-world"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M.1 9.26a8.07 8.07 0 0 1 3.718-8.077 7.965 7.965 0 0 1 8.073-.164 8.15 8.15 0 0 1 3.994 8.33 7.995 7.995 0 0 1-14.337 3.376A7.94 7.94 0 0 1 .1 9.26zm4.08-.195a1.146 1.146 0 0 0 1.78.842c.344.072.99.191.81.744a2.273 2.273 0 0 1 .226 1.782c.313.62-.065 1.737.688 2.024.868.007 1.13-.925 1.578-1.474-.197-.682 1.003-.914.457-1.68-.186-.767.678-1.228.984-1.837.189-.366.277-.618-.178-.37-.694.03-1.144-.674-1.396-1.238.482-.922.777.76 1.17.98.784-.094 1.15-.826 1.448-1.365.483-.054.743.491 1.19.462.358.321.118 1.652.697 1.409-.066-.643.476-1.58 1.08-1.482-.034.71.483.35.34-.156a6.702 6.702 0 0 0-3.133-5.338c-.55-.012-.856-.293-1.072-.11-.063.427-.17.693-.705.588-.572-.204-1.033.75-1.48.38.183-.175.399-.9-.255-.834-.773.002-1.802-.105-2.245.68-.113.453.67.72.816.887.394-.756 1.496.19.456.237a3.907 3.907 0 0 0-2.123.625c.562.34.003.556-.336.571-.089.248-.1.867.194.765.61.136 1.163-1.317 1.76-.526.163.337.696.5.364-.045-.252-.256-.403-.745.057-.312.134.199.852 1.24.713.519.102-.518.378.555.769.404.844.362-.097 1.107-.676.806-.464.056-.687.585-1.123.043-.268-.163-.008-.697-.58-.476-.809.048-1.613.153-1.992.991-.418.4-.167 1-.283 1.503zm.906-4.761c.29.598 1.485-.156.79-.75-.471-.591-.995-.09-.498.426-.002.18-.168.24-.291.324z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-burger"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h16v2.3H0zm0 6.9h16v2.3H0zm0 6.8h16V16H0z"
        />
      </svg>
    </symbol>
  </svg>
  <div
    className="container"
    style={
      Object {
        "paddingTop": 40,
      }
    }
  />
</div>
`;

exports[`Storyshots AppHeaderBar with no search result 1`] = `
<div>
  <nav
    className="tc-app-header-bar undefined navbar navbar-inverse navbar-fixed-top"
  >
    <div
      className="container-fluid"
    >
      <div
        className="navbar-header"
      >
        <span
          className="navbar-brand"
        >
          Example App Name
        </span>
        <button
          className="navbar-toggle collapsed"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Toggle navigation
          </span>
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
        </button>
      </div>
      <div
        aria-expanded={null}
        className="navbar-collapse collapse"
      >
        <ul
          className="nav navbar-nav"
          role={null}
        >
          <li>
            <button
              className="btn btn-link"
              disabled={false}
              name="hello"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOver={[Function]}
              role={null}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-burger"
                />
              </svg>
            </button>
          </li>
        </ul>
        <ul
          className="nav navbar-nav navbar-right"
          role={null}
        >
          <li>
            <button
              className="btn btn-link"
              disabled={false}
              name="world"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOver={[Function]}
              role={null}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-world"
                />
              </svg>
            </button>
          </li>
          <li
            className="dropdown"
            style={undefined}
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href="#"
              id="myDropdown"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              user 1
               
              <span
                className="caret"
              />
            </a>
            <ul
              aria-labelledby="myDropdown"
              className="dropdown-menu"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  <i
                    aria-hidden="true"
                    className="fa fa-fw fa-cog"
                    focusable="false"
                    title={null}
                  />
                  settings
                </a>
              </li>
            </ul>
          </li>
        </ul>
        <form
          className="navbar-form navbar-right"
          role="search"
        >
          <div
            style={Object {}}
          >
            <div
              className={undefined}
            >
              <label
                className="control-label sr-only"
                htmlFor="react-autowhatever-42-input"
              >
                Search
              </label>
              <input
                aria-activedescendant={null}
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={false}
                aria-owns="react-autowhatever-42"
                autoComplete="off"
                autoFocus={true}
                className="form-control"
                disabled={false}
                id="react-autowhatever-42-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={undefined}
                onKeyDown={undefined}
                placeholder={undefined}
                readOnly={false}
                role="combobox"
                style={Object {}}
                type="text"
                value="le"
              />
              <div
                className={undefined}
              >
                <i
                  aria-hidden="true"
                  className="fa fa-search"
                  focusable="false"
                  title={null}
                />
              </div>
            </div>
            <div
              id="react-autowhatever-42"
            >
              <div
                className="undefined undefined"
                style={Object {}}
              >
                <span
                  className="no-result"
                >
                  No result.
                </span>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </nav>
  <svg
    focusable="false"
    style={
      Object {
        "display": "none",
      }
    }
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      id="talend-world"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M.1 9.26a8.07 8.07 0 0 1 3.718-8.077 7.965 7.965 0 0 1 8.073-.164 8.15 8.15 0 0 1 3.994 8.33 7.995 7.995 0 0 1-14.337 3.376A7.94 7.94 0 0 1 .1 9.26zm4.08-.195a1.146 1.146 0 0 0 1.78.842c.344.072.99.191.81.744a2.273 2.273 0 0 1 .226 1.782c.313.62-.065 1.737.688 2.024.868.007 1.13-.925 1.578-1.474-.197-.682 1.003-.914.457-1.68-.186-.767.678-1.228.984-1.837.189-.366.277-.618-.178-.37-.694.03-1.144-.674-1.396-1.238.482-.922.777.76 1.17.98.784-.094 1.15-.826 1.448-1.365.483-.054.743.491 1.19.462.358.321.118 1.652.697 1.409-.066-.643.476-1.58 1.08-1.482-.034.71.483.35.34-.156a6.702 6.702 0 0 0-3.133-5.338c-.55-.012-.856-.293-1.072-.11-.063.427-.17.693-.705.588-.572-.204-1.033.75-1.48.38.183-.175.399-.9-.255-.834-.773.002-1.802-.105-2.245.68-.113.453.67.72.816.887.394-.756 1.496.19.456.237a3.907 3.907 0 0 0-2.123.625c.562.34.003.556-.336.571-.089.248-.1.867.194.765.61.136 1.163-1.317 1.76-.526.163.337.696.5.364-.045-.252-.256-.403-.745.057-.312.134.199.852 1.24.713.519.102-.518.378.555.769.404.844.362-.097 1.107-.676.806-.464.056-.687.585-1.123.043-.268-.163-.008-.697-.58-.476-.809.048-1.613.153-1.992.991-.418.4-.167 1-.283 1.503zm.906-4.761c.29.598 1.485-.156.79-.75-.471-.591-.995-.09-.498.426-.002.18-.168.24-.291.324z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-burger"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h16v2.3H0zm0 6.9h16v2.3H0zm0 6.8h16V16H0z"
        />
      </svg>
    </symbol>
  </svg>
  <div
    className="container"
    style={
      Object {
        "paddingTop": 40,
      }
    }
  />
</div>
`;

exports[`Storyshots AppHeaderBar with search button 1`] = `
<div>
  <nav
    className="tc-app-header-bar undefined navbar navbar-inverse navbar-fixed-top"
  >
    <div
      className="container-fluid"
    >
      <div
        className="navbar-header"
      >
        <span
          className="navbar-brand"
        >
          Example App Name
        </span>
        <button
          className="navbar-toggle collapsed"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Toggle navigation
          </span>
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
        </button>
      </div>
      <div
        aria-expanded={null}
        className="navbar-collapse collapse"
      >
        <ul
          className="nav navbar-nav"
          role={null}
        >
          <li>
            <button
              className="btn btn-link"
              disabled={false}
              name="hello"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOver={[Function]}
              role={null}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-burger"
                />
              </svg>
            </button>
          </li>
        </ul>
        <ul
          className="nav navbar-nav navbar-right"
          role={null}
        >
          <li>
            <button
              className="btn btn-link"
              disabled={false}
              name="world"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOver={[Function]}
              role={null}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-world"
                />
              </svg>
            </button>
          </li>
          <li
            className="dropdown"
            style={undefined}
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href="#"
              id="myDropdown"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              user 1
               
              <span
                className="caret"
              />
            </a>
            <ul
              aria-labelledby="myDropdown"
              className="dropdown-menu"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  <i
                    aria-hidden="true"
                    className="fa fa-fw fa-cog"
                    focusable="false"
                    title={null}
                  />
                  settings
                </a>
              </li>
            </ul>
          </li>
        </ul>
        <form
          className="navbar-form navbar-right"
          role="search"
        >
          <button
            className="btn btn-link"
            disabled={false}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseOver={[Function]}
            role={null}
            type="button"
          >
            <i
              aria-hidden="true"
              className="fa fa-search"
              focusable="false"
              title={null}
            />
          </button>
        </form>
      </div>
    </div>
  </nav>
  <svg
    focusable="false"
    style={
      Object {
        "display": "none",
      }
    }
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      id="talend-world"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M.1 9.26a8.07 8.07 0 0 1 3.718-8.077 7.965 7.965 0 0 1 8.073-.164 8.15 8.15 0 0 1 3.994 8.33 7.995 7.995 0 0 1-14.337 3.376A7.94 7.94 0 0 1 .1 9.26zm4.08-.195a1.146 1.146 0 0 0 1.78.842c.344.072.99.191.81.744a2.273 2.273 0 0 1 .226 1.782c.313.62-.065 1.737.688 2.024.868.007 1.13-.925 1.578-1.474-.197-.682 1.003-.914.457-1.68-.186-.767.678-1.228.984-1.837.189-.366.277-.618-.178-.37-.694.03-1.144-.674-1.396-1.238.482-.922.777.76 1.17.98.784-.094 1.15-.826 1.448-1.365.483-.054.743.491 1.19.462.358.321.118 1.652.697 1.409-.066-.643.476-1.58 1.08-1.482-.034.71.483.35.34-.156a6.702 6.702 0 0 0-3.133-5.338c-.55-.012-.856-.293-1.072-.11-.063.427-.17.693-.705.588-.572-.204-1.033.75-1.48.38.183-.175.399-.9-.255-.834-.773.002-1.802-.105-2.245.68-.113.453.67.72.816.887.394-.756 1.496.19.456.237a3.907 3.907 0 0 0-2.123.625c.562.34.003.556-.336.571-.089.248-.1.867.194.765.61.136 1.163-1.317 1.76-.526.163.337.696.5.364-.045-.252-.256-.403-.745.057-.312.134.199.852 1.24.713.519.102-.518.378.555.769.404.844.362-.097 1.107-.676.806-.464.056-.687.585-1.123.043-.268-.163-.008-.697-.58-.476-.809.048-1.613.153-1.992.991-.418.4-.167 1-.283 1.503zm.906-4.761c.29.598 1.485-.156.79-.75-.471-.591-.995-.09-.498.426-.002.18-.168.24-.291.324z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-burger"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h16v2.3H0zm0 6.9h16v2.3H0zm0 6.8h16V16H0z"
        />
      </svg>
    </symbol>
  </svg>
  <div
    className="container"
    style={
      Object {
        "paddingTop": 40,
      }
    }
  />
</div>
`;

exports[`Storyshots AppHeaderBar with search input 1`] = `
<div>
  <nav
    className="tc-app-header-bar undefined navbar navbar-inverse navbar-fixed-top"
  >
    <div
      className="container-fluid"
    >
      <div
        className="navbar-header"
      >
        <span
          className="navbar-brand"
        >
          Example App Name
        </span>
        <button
          className="navbar-toggle collapsed"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Toggle navigation
          </span>
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
        </button>
      </div>
      <div
        aria-expanded={null}
        className="navbar-collapse collapse"
      >
        <ul
          className="nav navbar-nav"
          role={null}
        >
          <li>
            <button
              className="btn btn-link"
              disabled={false}
              name="hello"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOver={[Function]}
              role={null}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-burger"
                />
              </svg>
            </button>
          </li>
        </ul>
        <ul
          className="nav navbar-nav navbar-right"
          role={null}
        >
          <li>
            <button
              className="btn btn-link"
              disabled={false}
              name="world"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOver={[Function]}
              role={null}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-world"
                />
              </svg>
            </button>
          </li>
          <li
            className="dropdown"
            style={undefined}
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href="#"
              id="myDropdown"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              user 1
               
              <span
                className="caret"
              />
            </a>
            <ul
              aria-labelledby="myDropdown"
              className="dropdown-menu"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  <i
                    aria-hidden="true"
                    className="fa fa-fw fa-cog"
                    focusable="false"
                    title={null}
                  />
                  settings
                </a>
              </li>
            </ul>
          </li>
        </ul>
        <form
          className="navbar-form navbar-right"
          role="search"
        >
          <div
            style={Object {}}
          >
            <div
              className={undefined}
            >
              <label
                className="control-label sr-only"
                htmlFor="react-autowhatever-42-input"
              >
                Search
              </label>
              <input
                aria-activedescendant={null}
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={false}
                aria-owns="react-autowhatever-42"
                autoComplete="off"
                autoFocus={true}
                className="form-control"
                disabled={false}
                id="react-autowhatever-42-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={undefined}
                onKeyDown={undefined}
                placeholder="Search..."
                readOnly={false}
                role="combobox"
                style={Object {}}
                type="text"
                value={undefined}
              />
              <div
                className={undefined}
              >
                <i
                  aria-hidden="true"
                  className="fa fa-search"
                  focusable="false"
                  title={null}
                />
              </div>
            </div>
            <div
              id="react-autowhatever-42"
            >
              <div
                style={Object {}}
              />
            </div>
          </div>
        </form>
      </div>
    </div>
  </nav>
  <svg
    focusable="false"
    style={
      Object {
        "display": "none",
      }
    }
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      id="talend-world"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M.1 9.26a8.07 8.07 0 0 1 3.718-8.077 7.965 7.965 0 0 1 8.073-.164 8.15 8.15 0 0 1 3.994 8.33 7.995 7.995 0 0 1-14.337 3.376A7.94 7.94 0 0 1 .1 9.26zm4.08-.195a1.146 1.146 0 0 0 1.78.842c.344.072.99.191.81.744a2.273 2.273 0 0 1 .226 1.782c.313.62-.065 1.737.688 2.024.868.007 1.13-.925 1.578-1.474-.197-.682 1.003-.914.457-1.68-.186-.767.678-1.228.984-1.837.189-.366.277-.618-.178-.37-.694.03-1.144-.674-1.396-1.238.482-.922.777.76 1.17.98.784-.094 1.15-.826 1.448-1.365.483-.054.743.491 1.19.462.358.321.118 1.652.697 1.409-.066-.643.476-1.58 1.08-1.482-.034.71.483.35.34-.156a6.702 6.702 0 0 0-3.133-5.338c-.55-.012-.856-.293-1.072-.11-.063.427-.17.693-.705.588-.572-.204-1.033.75-1.48.38.183-.175.399-.9-.255-.834-.773.002-1.802-.105-2.245.68-.113.453.67.72.816.887.394-.756 1.496.19.456.237a3.907 3.907 0 0 0-2.123.625c.562.34.003.556-.336.571-.089.248-.1.867.194.765.61.136 1.163-1.317 1.76-.526.163.337.696.5.364-.045-.252-.256-.403-.745.057-.312.134.199.852 1.24.713.519.102-.518.378.555.769.404.844.362-.097 1.107-.676.806-.464.056-.687.585-1.123.043-.268-.163-.008-.697-.58-.476-.809.048-1.613.153-1.992.991-.418.4-.167 1-.283 1.503zm.906-4.761c.29.598 1.485-.156.79-.75-.471-.591-.995-.09-.498.426-.002.18-.168.24-.291.324z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-burger"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h16v2.3H0zm0 6.9h16v2.3H0zm0 6.8h16V16H0z"
        />
      </svg>
    </symbol>
  </svg>
  <div
    className="container"
    style={
      Object {
        "paddingTop": 40,
      }
    }
  />
</div>
`;

exports[`Storyshots AppHeaderBar with search results 1`] = `
<div>
  <nav
    className="tc-app-header-bar undefined navbar navbar-inverse navbar-fixed-top"
  >
    <div
      className="container-fluid"
    >
      <div
        className="navbar-header"
      >
        <span
          className="navbar-brand"
        >
          Example App Name
        </span>
        <button
          className="navbar-toggle collapsed"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Toggle navigation
          </span>
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
        </button>
      </div>
      <div
        aria-expanded={null}
        className="navbar-collapse collapse"
      >
        <ul
          className="nav navbar-nav"
          role={null}
        >
          <li>
            <button
              className="btn btn-link"
              disabled={false}
              name="hello"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOver={[Function]}
              role={null}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-burger"
                />
              </svg>
            </button>
          </li>
        </ul>
        <ul
          className="nav navbar-nav navbar-right"
          role={null}
        >
          <li>
            <button
              className="btn btn-link"
              disabled={false}
              name="world"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOver={[Function]}
              role={null}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-world"
                />
              </svg>
            </button>
          </li>
          <li
            className="dropdown"
            style={undefined}
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href="#"
              id="myDropdown"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              user 1
               
              <span
                className="caret"
              />
            </a>
            <ul
              aria-labelledby="myDropdown"
              className="dropdown-menu"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  <i
                    aria-hidden="true"
                    className="fa fa-fw fa-cog"
                    focusable="false"
                    title={null}
                  />
                  settings
                </a>
              </li>
            </ul>
          </li>
        </ul>
        <form
          className="navbar-form navbar-right"
          role="search"
        >
          <div
            style={Object {}}
          >
            <div
              className={undefined}
            >
              <label
                className="control-label sr-only"
                htmlFor="react-autowhatever-42-input"
              >
                Search
              </label>
              <input
                aria-activedescendant={null}
                aria-autocomplete="list"
                aria-expanded={true}
                aria-haspopup={true}
                aria-owns="react-autowhatever-42"
                autoComplete="off"
                autoFocus={true}
                className="form-control"
                disabled={false}
                id="react-autowhatever-42-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={undefined}
                onKeyDown={undefined}
                placeholder={undefined}
                readOnly={false}
                role="combobox"
                style={Object {}}
                type="text"
                value="le"
              />
              <div
                className={undefined}
              >
                <i
                  aria-hidden="true"
                  className="fa fa-search"
                  focusable="false"
                  title={null}
                />
              </div>
            </div>
            <div
              id="react-autowhatever-42"
            >
              <div
                style={Object {}}
              >
                <div
                  style={Object {}}
                >
                  <div
                    style={Object {}}
                  >
                    <div
                      className={undefined}
                    >
                      <i
                        aria-hidden="true"
                        className="fa fa-filter"
                        focusable="false"
                        title="icon"
                      />
                      <span
                        className={undefined}
                      >
                        category 1
                      </span>
                    </div>
                  </div>
                  <ul
                    role="listbox"
                    style={Object {}}
                  >
                    <li
                      id="react-autowhatever-42-section-0-item-0"
                      onMouseDown={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <div
                        className={undefined}
                        title="le title 1"
                      >
                        <span
                          className={undefined}
                        >
                          <span>
                            <em
                              className={undefined}
                            >
                              le
                            </em>
                             tit
                            <em
                              className={undefined}
                            >
                              le
                            </em>
                             1
                          </span>
                        </span>
                        <p
                          className={undefined}
                        >
                          <span>
                            description: Uxoresque est in pacto est marito est hastam nomine in eos discessura incredibi
                            <em
                              className={undefined}
                            >
                              le
                            </em>
                             tempus ardore.
                          </span>
                        </p>
                      </div>
                    </li>
                    <li
                      id="react-autowhatever-42-section-0-item-1"
                      onMouseDown={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <div
                        className={undefined}
                        title="title 2 les elephants elementaires ont des aile"
                      >
                        <span
                          className={undefined}
                        >
                          <span>
                            tit
                            <em
                              className={undefined}
                            >
                              le
                            </em>
                             2 
                            <em
                              className={undefined}
                            >
                              le
                            </em>
                            s e
                            <em
                              className={undefined}
                            >
                              le
                            </em>
                            phants e
                            <em
                              className={undefined}
                            >
                              le
                            </em>
                            mentaires ont des ai
                            <em
                              className={undefined}
                            >
                              le
                            </em>
                          </span>
                        </span>
                        <p
                          className={undefined}
                        >
                          <span>
                            description: Aut aut cum satis inter Epicuri quidem cum erat inquam controversia autem mihi utrumque Attico.
                          </span>
                        </p>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  style={Object {}}
                >
                  <div
                    style={Object {}}
                  >
                    <div
                      className={undefined}
                    >
                      <i
                        aria-hidden="true"
                        className="fa fa-asterisk"
                        focusable="false"
                        title="icon"
                      />
                      <span
                        className={undefined}
                      >
                        category 2
                      </span>
                    </div>
                  </div>
                  <ul
                    role="listbox"
                    style={Object {}}
                  >
                    <li
                      id="react-autowhatever-42-section-1-item-0"
                      onMouseDown={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <div
                        className={undefined}
                        title="title 3"
                      >
                        <span
                          className={undefined}
                        >
                          <span>
                            tit
                            <em
                              className={undefined}
                            >
                              le
                            </em>
                             3
                          </span>
                        </span>
                        <p
                          className={undefined}
                        >
                          <span>
                            description: In sanciatur libere audeamus exspectemus amicitia et dum ne audeamus causa monendum honesta studium va
                            <em
                              className={undefined}
                            >
                              le
                            </em>
                            at.
                          </span>
                        </p>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  style={Object {}}
                >
                  <div
                    style={Object {}}
                  >
                    <div
                      className={undefined}
                    >
                      <i
                        aria-hidden="true"
                        className="fa fa-asterisk"
                        focusable="false"
                        title="icon"
                      />
                      <span
                        className={undefined}
                      >
                        category 3
                      </span>
                    </div>
                  </div>
                  <ul
                    role="listbox"
                    style={Object {}}
                  >
                    <li
                      id="react-autowhatever-42-section-2-item-0"
                      onMouseDown={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <div
                        className={undefined}
                        title="title 4"
                      >
                        <span
                          className={undefined}
                        >
                          <span>
                            tit
                            <em
                              className={undefined}
                            >
                              le
                            </em>
                             4
                          </span>
                        </span>
                        <p
                          className={undefined}
                        >
                          <span>
                            description: Praesentibus genero ne in Africani mandavi saepius ipsam C in libro et hoc Laeli cum.
                          </span>
                        </p>
                      </div>
                    </li>
                    <li
                      id="react-autowhatever-42-section-2-item-1"
                      onMouseDown={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <div
                        className={undefined}
                        title="title 5"
                      >
                        <span
                          className={undefined}
                        >
                          <span>
                            tit
                            <em
                              className={undefined}
                            >
                              le
                            </em>
                             5
                          </span>
                        </span>
                        <p
                          className={undefined}
                        >
                          <span>
                            description: Feceris unde tot illo tot clientes dederis numerando et indiscretus cum paria et unde ubi.
                          </span>
                        </p>
                      </div>
                    </li>
                    <li
                      id="react-autowhatever-42-section-2-item-2"
                      onMouseDown={[Function]}
                      role="option"
                      style={Object {}}
                    >
                      <div
                        className={undefined}
                        title="title 6"
                      >
                        <span
                          className={undefined}
                        >
                          <span>
                            tit
                            <em
                              className={undefined}
                            >
                              le
                            </em>
                             6
                          </span>
                        </span>
                        <p
                          className={undefined}
                        >
                          <span>
                            description: Gradu quos cedentium sunt appeterent ita ancoralia instar luna sunt etiam ubi incendente nihil observabant.
                          </span>
                        </p>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </nav>
  <svg
    focusable="false"
    style={
      Object {
        "display": "none",
      }
    }
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      id="talend-world"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M.1 9.26a8.07 8.07 0 0 1 3.718-8.077 7.965 7.965 0 0 1 8.073-.164 8.15 8.15 0 0 1 3.994 8.33 7.995 7.995 0 0 1-14.337 3.376A7.94 7.94 0 0 1 .1 9.26zm4.08-.195a1.146 1.146 0 0 0 1.78.842c.344.072.99.191.81.744a2.273 2.273 0 0 1 .226 1.782c.313.62-.065 1.737.688 2.024.868.007 1.13-.925 1.578-1.474-.197-.682 1.003-.914.457-1.68-.186-.767.678-1.228.984-1.837.189-.366.277-.618-.178-.37-.694.03-1.144-.674-1.396-1.238.482-.922.777.76 1.17.98.784-.094 1.15-.826 1.448-1.365.483-.054.743.491 1.19.462.358.321.118 1.652.697 1.409-.066-.643.476-1.58 1.08-1.482-.034.71.483.35.34-.156a6.702 6.702 0 0 0-3.133-5.338c-.55-.012-.856-.293-1.072-.11-.063.427-.17.693-.705.588-.572-.204-1.033.75-1.48.38.183-.175.399-.9-.255-.834-.773.002-1.802-.105-2.245.68-.113.453.67.72.816.887.394-.756 1.496.19.456.237a3.907 3.907 0 0 0-2.123.625c.562.34.003.556-.336.571-.089.248-.1.867.194.765.61.136 1.163-1.317 1.76-.526.163.337.696.5.364-.045-.252-.256-.403-.745.057-.312.134.199.852 1.24.713.519.102-.518.378.555.769.404.844.362-.097 1.107-.676.806-.464.056-.687.585-1.123.043-.268-.163-.008-.697-.58-.476-.809.048-1.613.153-1.992.991-.418.4-.167 1-.283 1.503zm.906-4.761c.29.598 1.485-.156.79-.75-.471-.591-.995-.09-.498.426-.002.18-.168.24-.291.324z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-burger"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h16v2.3H0zm0 6.9h16v2.3H0zm0 6.8h16V16H0z"
        />
      </svg>
    </symbol>
  </svg>
  <div
    className="container"
    style={
      Object {
        "paddingTop": 40,
      }
    }
  />
</div>
`;

exports[`Storyshots AppHeaderBar with simple form 1`] = `
<div>
  <nav
    className="tc-app-header-bar undefined navbar navbar-inverse navbar-fixed-top"
  >
    <div
      className="container-fluid"
    >
      <div
        className="navbar-header"
      >
        <span
          className="navbar-brand"
        >
          Example App Name
        </span>
        <button
          className="navbar-toggle collapsed"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Toggle navigation
          </span>
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
        </button>
      </div>
      <div
        aria-expanded={null}
        className="navbar-collapse collapse"
      >
        <ul
          className="nav navbar-nav"
          role={null}
        >
          <li>
            <button
              className="btn btn-link"
              disabled={false}
              name="hello"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOver={[Function]}
              role={null}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-burger"
                />
              </svg>
            </button>
          </li>
        </ul>
        <ul
          className="nav navbar-nav navbar-right"
          role={null}
        >
          <li>
            <button
              className="btn btn-link"
              disabled={false}
              name="world"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOver={[Function]}
              role={null}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-world"
                />
              </svg>
            </button>
          </li>
          <li
            className="dropdown"
            style={undefined}
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href="#"
              id="myDropdown"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              user 1
               
              <span
                className="caret"
              />
            </a>
            <ul
              aria-labelledby="myDropdown"
              className="dropdown-menu"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  <i
                    aria-hidden="true"
                    className="fa fa-fw fa-cog"
                    focusable="false"
                    title={null}
                  />
                  settings
                </a>
              </li>
            </ul>
          </li>
        </ul>
        <form
          className="navbar-form navbar-right"
          onSubmit={[Function]}
          pullRight={true}
          role="search"
        >
          <div
            className="form-group"
            pullRight={true}
          >
            <input
              className="form-control"
              id="globalSearch"
              onChange={[Function]}
              placeholder="search anything"
              type="text"
            />
          </div>
          <button
            className="btn btn-link"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            submit
          </button>
        </form>
      </div>
    </div>
  </nav>
  <svg
    focusable="false"
    style={
      Object {
        "display": "none",
      }
    }
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      id="talend-world"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M.1 9.26a8.07 8.07 0 0 1 3.718-8.077 7.965 7.965 0 0 1 8.073-.164 8.15 8.15 0 0 1 3.994 8.33 7.995 7.995 0 0 1-14.337 3.376A7.94 7.94 0 0 1 .1 9.26zm4.08-.195a1.146 1.146 0 0 0 1.78.842c.344.072.99.191.81.744a2.273 2.273 0 0 1 .226 1.782c.313.62-.065 1.737.688 2.024.868.007 1.13-.925 1.578-1.474-.197-.682 1.003-.914.457-1.68-.186-.767.678-1.228.984-1.837.189-.366.277-.618-.178-.37-.694.03-1.144-.674-1.396-1.238.482-.922.777.76 1.17.98.784-.094 1.15-.826 1.448-1.365.483-.054.743.491 1.19.462.358.321.118 1.652.697 1.409-.066-.643.476-1.58 1.08-1.482-.034.71.483.35.34-.156a6.702 6.702 0 0 0-3.133-5.338c-.55-.012-.856-.293-1.072-.11-.063.427-.17.693-.705.588-.572-.204-1.033.75-1.48.38.183-.175.399-.9-.255-.834-.773.002-1.802-.105-2.245.68-.113.453.67.72.816.887.394-.756 1.496.19.456.237a3.907 3.907 0 0 0-2.123.625c.562.34.003.556-.336.571-.089.248-.1.867.194.765.61.136 1.163-1.317 1.76-.526.163.337.696.5.364-.045-.252-.256-.403-.745.057-.312.134.199.852 1.24.713.519.102-.518.378.555.769.404.844.362-.097 1.107-.676.806-.464.056-.687.585-1.123.043-.268-.163-.008-.697-.58-.476-.809.048-1.613.153-1.992.991-.418.4-.167 1-.283 1.503zm.906-4.761c.29.598 1.485-.156.79-.75-.471-.591-.995-.09-.498.426-.002.18-.168.24-.291.324z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-burger"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h16v2.3H0zm0 6.9h16v2.3H0zm0 6.8h16V16H0z"
        />
      </svg>
    </symbol>
  </svg>
  <div
    className="container"
    style={
      Object {
        "paddingTop": 40,
      }
    }
  />
</div>
`;

exports[`Storyshots AppHeaderBar without brand link 1`] = `
<div>
  <nav
    className="tc-app-header-bar undefined navbar navbar-inverse navbar-fixed-top"
  >
    <div
      className="container-fluid"
    >
      <div
        className="navbar-header"
      >
        <span
          className="navbar-brand"
        >
          Example App Name
        </span>
        <button
          className="navbar-toggle collapsed"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Toggle navigation
          </span>
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
        </button>
      </div>
      <div
        aria-expanded={null}
        className="navbar-collapse collapse"
      >
        <ul
          className="nav navbar-nav"
          role={null}
        >
          <li>
            <button
              className="btn btn-link"
              disabled={false}
              name="hello"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOver={[Function]}
              role={null}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-burger"
                />
              </svg>
            </button>
          </li>
        </ul>
        <ul
          className="nav navbar-nav navbar-right"
          role={null}
        >
          <li>
            <button
              className="btn btn-link"
              disabled={false}
              name="world"
              onClick={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseOver={[Function]}
              role={null}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="tc-svg-icon"
                focusable="false"
                title={null}
              >
                <use
                  xlinkHref="#talend-world"
                />
              </svg>
            </button>
          </li>
          <li
            className="dropdown"
            style={undefined}
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle"
              href="#"
              id="myDropdown"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              user 1
               
              <span
                className="caret"
              />
            </a>
            <ul
              aria-labelledby="myDropdown"
              className="dropdown-menu"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  <i
                    aria-hidden="true"
                    className="fa fa-fw fa-cog"
                    focusable="false"
                    title={null}
                  />
                  settings
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </nav>
  <svg
    focusable="false"
    style={
      Object {
        "display": "none",
      }
    }
    xmlns="http://www.w3.org/2000/svg"
  >
    <symbol
      id="talend-world"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M.1 9.26a8.07 8.07 0 0 1 3.718-8.077 7.965 7.965 0 0 1 8.073-.164 8.15 8.15 0 0 1 3.994 8.33 7.995 7.995 0 0 1-14.337 3.376A7.94 7.94 0 0 1 .1 9.26zm4.08-.195a1.146 1.146 0 0 0 1.78.842c.344.072.99.191.81.744a2.273 2.273 0 0 1 .226 1.782c.313.62-.065 1.737.688 2.024.868.007 1.13-.925 1.578-1.474-.197-.682 1.003-.914.457-1.68-.186-.767.678-1.228.984-1.837.189-.366.277-.618-.178-.37-.694.03-1.144-.674-1.396-1.238.482-.922.777.76 1.17.98.784-.094 1.15-.826 1.448-1.365.483-.054.743.491 1.19.462.358.321.118 1.652.697 1.409-.066-.643.476-1.58 1.08-1.482-.034.71.483.35.34-.156a6.702 6.702 0 0 0-3.133-5.338c-.55-.012-.856-.293-1.072-.11-.063.427-.17.693-.705.588-.572-.204-1.033.75-1.48.38.183-.175.399-.9-.255-.834-.773.002-1.802-.105-2.245.68-.113.453.67.72.816.887.394-.756 1.496.19.456.237a3.907 3.907 0 0 0-2.123.625c.562.34.003.556-.336.571-.089.248-.1.867.194.765.61.136 1.163-1.317 1.76-.526.163.337.696.5.364-.045-.252-.256-.403-.745.057-.312.134.199.852 1.24.713.519.102-.518.378.555.769.404.844.362-.097 1.107-.676.806-.464.056-.687.585-1.123.043-.268-.163-.008-.697-.58-.476-.809.048-1.613.153-1.992.991-.418.4-.167 1-.283 1.503zm.906-4.761c.29.598 1.485-.156.79-.75-.471-.591-.995-.09-.498.426-.002.18-.168.24-.291.324z"
        />
      </svg>
    </symbol>
    <symbol
      id="talend-burger"
    >
      <svg
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h16v2.3H0zm0 6.9h16v2.3H0zm0 6.8h16V16H0z"
        />
      </svg>
    </symbol>
  </svg>
  <div
    className="container"
    style={
      Object {
        "paddingTop": 40,
      }
    }
  />
</div>
`;
